force-app/main/default/objects/Approval_Process_Record__c/Approval_Process_Record__c.object-meta.xml
<CustomObject>
    <label>Approval Process Record</label>
    <nameField>
        <displayFormat>APR{00000000}</displayFormat>
        <label>Approval Process Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Process Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>