force-app/main/default/objects/Approval_Process_Record__c/fields/Alerts_Sent__c.field-meta.xml
<CustomField>
    <fullName>Alerts_Sent__c</fullName>
    <label>Alerts Sent</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>