force-app/main/default/objects/Approval_Process_Record__c/fields/Approval_Process_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Reminder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Process Reminder</label>
    <referenceTo>Approval_Process_Reminder__c</referenceTo>
    <relationshipLabel>Approval Process Records</relationshipLabel>
    <relationshipName>Approval_Process_Records</relationshipName>
    <type>Lookup</type>
</CustomField>