force-app/main/default/objects/Approval_Process_Record__c/fields/Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Name__c</fullName>
    <formula>Approver__r.FirstName + &apos; &apos;+ Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver Name</label>
    <type>Text</type>
</CustomField>