force-app/main/default/objects/Approval_Process_Record__c/fields/Pending_Hours__c.field-meta.xml
<CustomField>
    <fullName>Pending_Hours__c</fullName>
    <label>Pending Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>