force-app/main/default/objects/Approval_Process_Record__c/fields/ProcessInstance_Id__c.field-meta.xml
<CustomField>
    <fullName>ProcessInstance_Id__c</fullName>
    <label>ProcessInstance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>